# Aixis-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.toml  tailwind.config.js
.claude/: launch.json  plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  lighthouse.yml
alembic/: env.py
config/patterns/: ambiguous.yaml  broken_grammar.yaml  business_jp.yaml  contradictory.yaml  dialect.yaml  keigo_mixing.yaml  long_input.yaml  minutes_accuracy.yaml  minutes_advanced.yaml  minutes_basic.yaml  minutes_complex.yaml  minutes_japanese.yaml  minutes_structure.yaml  minutes_transcription.yaml  multi_step.yaml  slide_accuracy.yaml  slide_advanced.yaml  slide_basic.yaml  slide_japanese.yaml  slide_structure.yaml  slide_ui_evaluation.yaml  translation_accuracy.yaml  translation_context.yaml  translation_financial.yaml  translation_japanese.yaml  translation_legal.yaml  translation_manual.yaml  translation_marketing.yaml  unicode_edge.yaml
config/profiles/: accounting.yaml  agriculture.yaml  chatbot.yaml  code_generation.yaml  construction.yaml  customer_support.yaml  data_analysis.yaml  document_creation.yaml  education.yaml  email_writing.yaml  finance.yaml  government.yaml  hr_recruitment.yaml  image_generation.yaml  legal.yaml  logistics.yaml  manufacturing.yaml  marketing.yaml  medical.yaml  meeting_minutes.yaml  meeting_notes.yaml  ocr.yaml  real_estate.yaml  retail.yaml  search_rag.yaml  slide_creation.yaml  translation.yaml  video_creation.yaml  voice_recognition.yaml  workflow_automation.yaml
config/report/: report_config.yaml
config/scoring/: scoring_rules.yaml
config/scoring/checklists/: cost_performance.yaml  localization.yaml  practicality_manual.yaml  safety_manual.yaml  uniqueness.yaml
config/seed/: industry_tags.yaml  regulatory_frameworks.yaml  use_case_tags.yaml
config/targets/: example_target.yaml  gamma.yaml
docs/: DISASTER_RECOVERY.md
scripts/: aixis_local_agent.py  build_fonts.py  build_whitepaper.py  gen_static_ogp.py  migrate_sqlite_to_pg.py  post_deploy_healthcheck.py
src/aixis_agent/: __init__.py  cli.py  local_runner.py
src/aixis_agent/core/: enums.py  interfaces.py  models.py
src/aixis_agent/executors/: ai_browser_executor.py  playwright_executor.py
src/aixis_agent/orchestrator/: pipeline.py  session.py
src/aixis_agent/patterns/: generator.py  loader.py  validators.py
src/aixis_agent/profiles/: registry.py
src/aixis_agent/reporting/: __init__.py  badge_generator.py  builder.py  comparison_renderer.py  html_renderer.py  json_renderer.py  pdf_renderer.py  ranking_renderer.py  trend_renderer.py
src/aixis_agent/scoring/: aggregator.py  engine.py  rules.py
src/aixis_agent/utils/: japanese.py  logging.py
src/aixis_web/: _time.py  app.py  config.py  crypto.py  observability.py  pages.py  seed.py
src/aixis_web/api/: deps.py
src/aixis_web/db/: __init__.py  base.py
src/aixis_web/i18n/: __init__.py
src/chrome-extension/: manifest.json
tests/: conftest.py  test_public_pages_smoke.py  test_sitemap_integration.py  test_template_smoke.py  test_time_utils.py  test_trial_service.py
tests/test_patterns/: test_generator.py  test_loader.py
tests/test_scoring/: test_5axis.py  test_engine.py
(+191 files in other folders)
